--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
 	<script type="text/javascript" src="src/renderer.js"></script>
 	<script type="text/javascript" src="src/cut.js"></script>
 	<script type="text/javascript" src="src/userInput.js"></script>
-	<script type="text/javascript" src="src/pos.js"></script>
+	<script type="text/javascript" src="src/camera.js"></script>
+
+	<script type="text/javascript" src="src/lib/math.js"></script>
+	<script type="text/javascript" src="src/lib/point.js"></script>
+	<script type="text/javascript" src="src/lib/vector.js"></script>
+
+	<style type="text/css">
+		body{
+			margin:0px;
+			overflow-x: hidden;
+			overflow-y: hidden;
+		}
+	</style>
 </head>
 
 <body onload="main()">
