--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<script type="text/javascript" src="src/cut.js"></script>
 	<script type="text/javascript" src="src/userInput.js"></script>
 	<script type="text/javascript" src="src/camera.js"></script>
+	<script type="text/javascript" src="src/cutmanager.js"></script>
 
 	<script type="text/javascript" src="src/lib/math.js"></script>
 	<script type="text/javascript" src="src/lib/point.js"></script>
