select nested cuts and initial work on symbols

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<script type="text/javascript" src="src/userInput.js"></script>
 	<script type="text/javascript" src="src/camera.js"></script>
 	<script type="text/javascript" src="src/cutmanager.js"></script>
+	<script type="text/javascript" src="src/symbol.js"></script>
 
 	<script type="text/javascript" src="src/lib/math.js"></script>
 	<script type="text/javascript" src="src/lib/point.js"></script>
@@ -21,6 +22,7 @@
 		}
 	</style>
 </head>
+<p id="debug" style="position: absolute;z-index: 999;"></p>
 
 <body onload="main()">
 	<canvas id="canvas" width="100%"></canvas>
