--- a/index.html
+++ b/index.html
@@ -14,17 +14,14 @@
 	<script type="text/javascript" src="src/lib/point.js"></script>
 	<script type="text/javascript" src="src/lib/vector.js"></script>
 
-	<style type="text/css">
-		body{
-			margin:0px;
-			overflow-x: hidden;
-			overflow-y: hidden;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
+
 <p id="debug" style="position: absolute;z-index: 999;"></p>
+<button onclick="toggleMode()" id = "toggle_mode" class = "btn btn-transform">Transform Mode</button>
 
 <body onload="main()">
 	<canvas id="canvas" width="100%"></canvas>
 </body>
+
 </html>
