--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 <p id="debug" style="position: absolute;z-index: 999;"></p>
 <button onclick="toggleMode()" id = "toggle_mode" class = "btn btn-transform">Transform Mode</button>
 
-<body onload="main(); loadMini();">
+<body onload="main();">
 	<canvas id="canvas" width="100%"></canvas>
 </body>
 
-<div>
+<!-- <div>
 	<canvas id="mini-canvas"></canvas>
 	<button class="btn"></button>
-</div>
+</div> -->
 </html>
