convert to spaces and add insert button

--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
 <div id="mini-renderer" style="display: none;">
 	<canvas id="mini-canvas"></canvas>
 	<button onclick="toggleMiniRenderer()" class="btn" id="exit-mini">Exit</button>
+	<button class="btn" id="insert-graph">Insert</button>
 </div>
 </html>
