implement displaying messages & fix toggle on dbl cut button

--- a/index.html
+++ b/index.html
@@ -48,4 +48,10 @@
 	<button class="btn" id="exit-mini">Exit</button>
 	<button class="btn" id="insert-graph">Insert</button>
 </div>
+
+
+<div id="msg-buff">
+	<!-- <div class="msg"> </div> -->
+</div>
+
 </html>
