--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<script type="module" src="src/symbol.js"></script>
 	<script type="module" src="src/minirenderer.js"></script>
 	<script type="module" src="src/canvasManager.js"></script>
+	<script type="module" src="src/subgraph.js"></script>
 
 	<script type="module" src="src/lib/math.js"></script>
 	<script type="module" src="src/lib/point.js"></script>
