--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<title>VisualLogic-Web</title>
 </head>
 
-<p id="debug" style="position: absolute;z-index: 999;"></p>
+<p id="debug" data-debug-mode="false" style="position: absolute;z-index: 999;top:50px;"></p>
 
 <body>
 	<canvas id="canvas" width="100%"></canvas>
