--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<script type="module" src="src/symbol.js"></script>
 	<script type="module" src="src/minirenderer.js"></script>
 	<script type="module" src="src/canvasManager.js"></script>
-	<script type="module" src="src/subgraph.js"></script>
 
 	<script type="module" src="src/lib/math.js"></script>
 	<script type="module" src="src/lib/point.js"></script>
@@ -22,7 +21,7 @@
 	<title>VisualLogic-Web</title>
 </head>
 
-<p id="debug" data-debug-mode="false" style="position: absolute;z-index: 999;top:50px;"></p>
+<p id="debug" data-debug-mode="true" style="position: absolute;z-index: 999;top:50px;"></p>
 
 <body>
 	<canvas id="canvas" width="100%"></canvas>
